Adding more article data

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "fast-glob": "^3.2.7",
+    "gray-matter": "^4.0.3",
     "morgan": "~1.9.1",
+    "reading-time": "^1.5.0",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
