--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "tsc --project ./",
     "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=development nodemon src/app"
+    "dev": "cross-env NODE_ENV=development nodemon app.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,10 +19,17 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.11.6",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.14",
     "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
